[metadata]
name = saturn_affinity
version = 0.0.1
url = https://github.com/saturnsky/saturn_affinity_python
author = SaturnSky
author_email = ikadro@gmail.com
license = The MIT License
license_file = LICENSE.txt
description = Expand standard functools to methods
long_description = file: README.md
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
[options]
py_modules = saturn_affinity
install_requires =
    pywin32==305
    pywin32-ctypes==0.2.0
    pystray==0.19.4
[options.extras_require]
installer =
    pyinstaller==5.7.0
